<resources>
    <string name="app_name">Faculty Repository</string>


    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">search</string>

    <string name="action_settings">Settings</string>
    <string name="upload_image">upload image</string>
    <string name="registration_number">Registration Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_length">Password too short, enter minimum 6 characters!</string>
    <string name="failed_auth">Authentication failed, check your email and password or sign up</string>
    <string name="email">Email</string>
    <string name="signout">signout</string>
    <string name="download">download</string>
    <string name="preview">preview</string>
    <string name="archive">archive</string>
    <string name="create_student_profile">Create Profile</string>
    <string name="create_lecturer_profile">Create Profile</string>
    <string name="student">Student?</string>
    <string name="lecturer">Lecturer?</string>
    <string name="profile_picture">profile_picture</string>
    <string name="update_student_profile">Update Profile</string>
    <string name="update_lecturer_profile">Update Profile</string>
</resources>
