<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:text="Hello World"
            android:textSize="50sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_get_app_black_24dp"
                android:contentDescription="@string/download"/>
            <ImageView
                android:id="@+id/preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_view_agenda_black_24dp"
                android:contentDescription="@string/preview" />
            <ImageView
                android:id="@+id/archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_archive_black_24dp"
                android:contentDescription="@string/archive"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>